sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:3: error: value getNombreValeurs is not a member of Int
  for (i<- 1 getNombreValeurs()-1){
             ^AlgInsertionSort:3: error: value - is not a member of Unit
  for (i<- 1 getNombreValeurs()-1){
                               ^AlgInsertionSort:4: error: not found: value v
    v = getValeur(i)
    ^AlgInsertionSort:6: error: not found: value v
    while(!plusPetitQue(j,v)){
                          ^AlgInsertionSort:10: error: not found: value v
    setValeur(j,v)
                ^