sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  for (i<- 1 getNombreValeurs()-1){
    v = getValeur(i)
    var j = i-1
    while(!plusPetitQue(j,v)){
      copie(j,j+1)
      j-=1
    }
    setValeur(j,v)
}
}